# lasernet

./: .gitmodules  README.md  lasernet.code-workspace
.github/workflows/: controller.yml  tagger.yml
controller/: README.md
controller/distro/: README.md  bootstate.dtsi
controller/distro/configs/: ptxconfig
controller/distro/configs/platform-mips/: platformconfig
controller/distro/configs/platform-v7a/: platformconfig
controller/distro/configs/platform-v7a_noneon/: barebox-at91.config  barebox-vexpress.config.diff  platformconfig
controller/distro/configs/platform-v8a/: kernelconfig  platformconfig
controller/distro/configs/platform-x86_64/: barebox.config  kernelconfig  platformconfig
controller/software/: Cargo.toml  rust-toolchain.toml
controller/software/src/: main.rs
distro/: README.md
distro/configs/: bsp.ref  ptxconfig
distro/configs/platform-mipsel/: platformconfig
distro/configs/platform-rpi1/: platformconfig
distro/configs/platform-v7a/: kernelconfig
distro/configs/platform-v7a/rules/: barebox-at91.make  barebox-common.make  (+2 more)
distro/configs/platform-v7a_noneon/: barebox-at91.config.diff  barebox-common.config  barebox-vexpress.config
distro/configs/platform-v8a/: barebox.config
distro/configs/platform-x86_64/: barebox.config  platformconfig
distro/doc/: hardware.rst  hardware_v8a_tqma93xxca.rst
tagger/firmware/: Cargo.toml  README.md  rust-toolchain.toml  taskfile.dist.yaml
tagger/firmware/src/: error.rs  hardware.rs  main.rs
tagger/hardware/: audio.kicad_sch  fp-info-cache  fp-lib-table  power.kicad_sch  rf.kicad_sch  sym-lib-table  tagger.kicad_prl  tagger.kicad_pro  tagger.kicad_sch  ~tagger.kicad_sch.lck
(+29 files in other folders)
